objects/Mentee__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Mentees</relationshipLabel>
        <relationshipName>Mentees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Mentor_Email__c</fullName>
        <label>Mentor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Mentor_Name__c</fullName>
        <formula>Mentor__r.User__r.FirstName &amp; &apos; &apos; &amp;  Mentor__r.User__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mentor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mentor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mentor</label>
        <referenceTo>Mentor__c</referenceTo>
        <relationshipLabel>Mentees</relationshipLabel>
        <relationshipName>Mentees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mentorship_End_Date__c</fullName>
        <label>Mentorship End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mentorship_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mentorship Request</label>
        <referenceTo>Mentorship_Request__c</referenceTo>
        <relationshipLabel>Mentees</relationshipLabel>
        <relationshipName>Mentees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mentorship_Start_Date__c</fullName>
        <label>Mentorship Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Mentees</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Mentee</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Contact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ME-{0000}</displayFormat>
        <label>Mentee</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mentees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>